--- a/portfolio.css
+++ b/portfolio.css
@@ -20,3 +20,7 @@
 section#about .container {
   padding-top: 160px;
 }
+
+footer.warna {
+  background-image: linear-gradient(to bottom, #09d8ff, #00c5fc, #00b1f7, #009cef, #2b87e2);
+}
